# sbv2-api

./: Cargo.toml  LICENSE  Makefile  README.md  test.py
.github/workflows/: build.yml  lint.yml
crates/sbv2_api/: Cargo.toml
crates/sbv2_api/src/: main.rs
crates/sbv2_bindings/: Cargo.toml
crates/sbv2_bindings/src/: sbv2.rs
crates/sbv2_core/: Cargo.toml  build.rs
crates/sbv2_core/src/: bert.rs  error.rs  jtalk.rs  main.rs  model.rs  mora.rs  style.rs  tts.rs  tts_util.rs
crates/sbv2_core/tests/: jpreprocess_test.rs
crates/sbv2_editor/: Cargo.toml  README.md
crates/sbv2_editor/src/: main.rs
crates/sbv2_voicevox/: Cargo.toml  query2.json
crates/sbv2_voicevox/src/: main.rs
crates/sbv2_wasm/: README.md  package.json  pnpm-lock.yaml
scripts/convert/: requirements.txt
scripts/docker/: cpu.Dockerfile  cuda.Dockerfile  run_cpu.sh  run_cuda.sh
