[package]
name = "sbv2_voicevox"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.8.1"
sbv2_core = { version = "0.2.0-alpha6", path = "../sbv2_core" }
